--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: CI
-
-on: [push]
-
+on: 
+  push:
+    branches: [master]
 
 jobs:
   publish:
@@ -21,3 +21,5 @@ jobs:
       - name: Deploy
         if: success()
         uses: maxheld83/ghpages@v0.2.1
+        env:
+          BUILD_DIR: dist
