--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,20 +6,19 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '12.x'
       - run: npm install
       - run: npm run build --if-present
       - name: Deploy
         if: success()
+        with:
+          GH_PAT: ${{ secrets.GH_PAT }}
         uses: maxheld83/ghpages@v0.2.1
         env:
           BUILD_DIR: dist
