--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
@@ -17,8 +17,7 @@ jobs:
       - run: npm run build --if-present
       - name: Deploy
         if: success()
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        uses: maxheld83/ghpages@v0.2.1
-        env:
-          BUILD_DIR: dist
+          personal_token: ${{ secrets.GH_PAT }}
+          publish_dir: ./dist
