--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Elm France",
   "short_name": "Elm France",
-  "description": "Elm France – organisation d'évènement Elm en France",
+  "description": "Elm France – organisation d'évènements Elm en France",
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
