--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '12.x'
       - run: npm install
       - run: npm run build --if-present
-      - run: echo "elm-france.com" >> CNAME
+      - run: echo "elm-france.com" >> ./dist/CNAME
       - name: Deploy
         if: success()
         uses: peaceiris/actions-gh-pages@v3
